--- a/.env.template
+++ b/.env.template
@@ -5,5 +5,5 @@
 # Vercel personal access token (store in 1Password)
 VERCEL_TOKEN={{ op://Dev/Vercel Token (Clawdbot)/token }}
 
-# Formspree endpoint (not secret)
-FORMSPREE_ENDPOINT=https://formspree.io/f/xpqdbozo
+# Formspree endpoint (not secret, but stored in 1Password for consistency)
+FORMSPREE_ENDPOINT={{ op://Dev/Formspree BG Clear/endpoint }}
