feat: on-page request a call form + smooth scroll

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,6 @@ VERCEL_TOKEN={{ op://Dev/Vercel Token (Clawdbot)/token }}
 
 # Formspree endpoint (not secret, but stored in 1Password for consistency)
 FORMSPREE_ENDPOINT={{ op://Dev/Formspree BG Clear/endpoint }}
+
+# Formspree (Request a call form)
+PUBLIC_FORMSPREE_ENDPOINT=
